--- a/Mpp_Project/res/layout/activity_new_flat.xml
+++ b/Mpp_Project/res/layout/activity_new_flat.xml
@@ -5,9 +5,10 @@
 	android:orientation="vertical" >
 
 	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:orientation="horizontal" >
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal"
+	    android:padding="10dp" >
 
 		<Button
 		    android:id="@+id/newFlatButton"
@@ -15,7 +16,10 @@
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_weight="1"
-		    android:text="Create a Flat" />
+		    android:background="@color/blue"
+		    android:layout_marginRight="5dp"
+		    android:text="Create Flat" 
+		    android:textColor="@color/white"/>
 
 		<Button
 		    android:id="@+id/joinFlatButton"
@@ -23,7 +27,10 @@
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_weight="1"
-		    android:text="Join a Flat" />
+		    android:background="@color/blue"
+		    android:layout_marginLeft="5dp"
+		    android:text="Join Flat" 
+		    android:textColor="@color/white"/>
 
 	</LinearLayout>
 
