--- a/Mpp_Project/res/values/colors.xml
+++ b/Mpp_Project/res/values/colors.xml
@@ -3,5 +3,6 @@
 
 	<color name="blue">#78B2DA</color>
 	<color name="grey_light">#e2e2e2</color>
+	<color name="white">#ffffff</color>
 
 </resources>
