--- a/Mpp_Project/res/layout/activity_login.xml
+++ b/Mpp_Project/res/layout/activity_login.xml
@@ -20,10 +20,7 @@
 	    android:id="@+id/logo"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:layout_alignParentLeft="true"
-	    android:layout_alignParentTop="true"
-	    android:layout_alignStart="@+id/loginButton"
-	    android:contentDescription="@null"
+	    android:layout_centerInParent="true"
 	    android:src="@drawable/icon_big" />
 
 </RelativeLayout>
