--- a/Mpp_Project/res/layout/activity_login.xml
+++ b/Mpp_Project/res/layout/activity_login.xml
@@ -1,26 +1,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/blue" >
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:background="@color/blue" >
 
 	<Button
 		android:id="@+id/loginButton"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-        android:padding="15dp"
+		android:layout_alignParentBottom="true"
+		android:layout_centerHorizontal="true"
+		android:layout_marginBottom="30dp"
+		android:padding="15dp"
 		android:text="@string/login"
 		android:textColor="#fff"
-		android:textStyle="bold"
-        android:layout_marginBottom="69dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+		android:textStyle="bold" />
 
 	<ImageView
-	    android:id="@+id/logo"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_centerInParent="true"
-	    android:src="@drawable/icon_big" />
+		android:id="@+id/logo"
+		android:layout_width="match_parent"
+		android:layout_height="300dp"
+		android:layout_centerInParent="true"
+		android:src="@drawable/icon_big" />
 
 </RelativeLayout>
