--- a/Mpp_Project/res/layout/activity_login.xml
+++ b/Mpp_Project/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
 		android:layout_height="wrap_content"
 		android:layout_alignParentBottom="true"
 		android:layout_centerHorizontal="true"
-		android:layout_marginBottom="30dp"
+		android:layout_marginBottom="80dp"
 		android:padding="15dp"
 		android:text="@string/login"
 		android:textColor="#fff"
@@ -19,8 +19,10 @@
 	<ImageView
 		android:id="@+id/logo"
 		android:layout_width="match_parent"
+		android:layout_alignParentBottom="true"
 		android:layout_height="300dp"
-		android:layout_centerInParent="true"
+		android:layout_marginBottom="150dp"
+		android:layout_centerHorizontal="true"
 		android:src="@drawable/icon_big" />
 
 </RelativeLayout>
