--- a/Mpp_Project/res/layout/layout_loan_item.xml
+++ b/Mpp_Project/res/layout/layout_loan_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res/dk.aau.mpp_project"
 	android:id="@+id/loan_card_layout"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
@@ -13,15 +14,14 @@
 		android:layout_marginRight="10dp"
 		android:orientation="horizontal" >
 
-		<ImageView
-			android:id="@+id/picYou"
-			android:layout_width="50dp"
-			android:layout_height="50dp"
-			android:layout_column="0"
-			android:layout_gravity="center_vertical"
-			android:layout_marginRight="5dp"
-			android:layout_row="0"
-			android:longClickable="false" />
+		<dk.aau.mpp_project.filter.CircleImageView
+				android:id="@+id/picYou"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_margin="5dp"
+				app:border_color="#EEEEEE"
+				app:border_width="4dp"
+				app:shadow="true" />
 
 		<ImageView
 			android:id="@+id/picArrow"
@@ -32,16 +32,14 @@
 			android:layout_row="0"
 			android:longClickable="false" />
 
-		<ImageView
-			android:id="@+id/picUser"
-			android:layout_width="50dp"
-			android:layout_height="50dp"
-			android:layout_column="0"
-			android:layout_gravity="center_vertical"
-			android:layout_marginLeft="5dp"
-			android:layout_marginRight="10dp"
-			android:layout_row="0"
-			android:longClickable="false" />
+		<dk.aau.mpp_project.filter.CircleImageView
+				android:id="@+id/picUser"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_margin="5dp"
+				app:border_color="#EEEEEE"
+				app:border_width="4dp"
+				app:shadow="true" />
 
 		<TextView
 			android:id="@+id/amountItem"
